# owl-middleware

./: .gitignore  pyproject.toml
owl_middleware/: main.py
owl_middleware/filters/: __init__.py  container.py  file_filters.py
owl_middleware/handlers/: __init__.py  commnads.py  handlers.py  http.py
owl_middleware/handlers/http/: __init__.py  auth.py  chat.py  containers.py  dependencies.py  error_handling.py  files.py  groups.py  health.py  layout.py  ocr.py  recommendations.py  schemas.py  search.py  serializers.py
owl_middleware/middleware/: __init__.py  auth.py  error.py  logger.py
owl_middleware/models/: __init__.py  api.py  container.py  file.py  file2group.py  group.py  label.py  semantic_edge.py  tariff.py  user.py
owl_middleware/resolvers/: __init__.py  context.py  file.py  user.py
owl_middleware/services/: __init__.py  agent.py  api.py  auth.py  container.py  db.py  file.py  groups.py  ocr.py  parser.py  pdf.py  redis.py  state.py  valito.py
owl_middleware/services/api/: __init__.py  client.py  container.py  file.py  init.py  recommendations.py  system.py
owl_middleware/services/sockets/: connection.py
owl_middleware/services/state/: state.py
owl_middleware/templates/buttons/: container_menu_buttons.j2  ocr_result_validate.j2  search_file_buttons.j2  start_menu_buttons.j2
owl_middleware/templates/commands/: api_error.j2  choose_container.j2  create_container.j2  delete_file.j2  download_file.j2  file_info.j2  file_read_impl.j2  get_token.j2  health_check.j2  list_files.j2  no_registration.j2  ocr_save_error.j2  ocr_save_success.j2  (+9 more)
(+16 files in other folders)
