[tool.poetry]
name = "owl-middleware"
version = "0.1.0"
description = ""
authors = ["Bararide <445467246r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
asyncio = "^4.0.0"
aiofiles = "^24.1.0"
fastapi = "^0.116.1"
aiogram = "^3.22.0"
celery = "^5.5.3"
loguru = "^0.7.3"
pydantic = "^2.11.9"
motor = "^3.7.1"
jinja2 = "^3.1.6"
pampy = "^0.3.0"
dotenv = "^0.9.9"
ruff = "^0.13.0"
pymupdf = "^1.26.5"
jwt = "^1.4.0"
email-validator = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
